add mobile layout item, simplify calibration and measure button actions